arkts_static_test/17_Experimental_Features/ets_cases/17.7.2_Callable_Types_with_instantiate_Method/compile-fail/EXP2_17_07_02_009_FAIL_SAME_PARAMS_DIFF_RETURN.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id EXP2_17_07_02_009_FAIL_SAME_PARAMS_DIFF_RETURN
 * @expect compile-fail
 * @section 17.7.2
 * @design 多个 $_instantiate 签名相同（相同参数列表）但返回类型不同时，应产生编译时错误
 * @note 反向用例：验证相同参数不同返回类型的多个 $_instantiate 编译失败
 */
class MyFailFactory3 {
  constructor() {}

  static $_instantiate(__factory: () => MyFailFactory3): MyFailFactory3 {
    return __factory()
  }

  static $_instantiate(__factory: () => MyFailFactory3): int {
    return 0
  }
}
